--- a/pootle/templates/layout.html
+++ b/pootle/templates/layout.html
@@ -130,7 +130,7 @@
             <ul class="dropdown-menu">
               <li><a href="{{ user.get_absolute_url }}">{% trans 'Public Profile' %}</a></li>
               <li><a href="{% url 'pootle-user-settings' user.username %}">{% trans 'Settings' %}</a></li>
-              {% if user.is_superuser or request.permissions.add_project %}
+              {% if user.is_superuser or request.permissions.create_project %}
               <li><a href="{% url 'pootle-user-projects' %}">{% trans "My Projects" %}</a></li>
               {% endif %}
               {% if user.is_superuser %}
